tests/idris2/error024/expected
1/1: Building Error1 (Error1.idr)
Error: While processing right hand side of main. When unifying:
    Int
and:
    String
Mismatch between: Int and String.

Error1:5:17--5:26
 1 | foo : Int -> IO Int
 2 | foo x = pure x
 3 | 
 4 | main : IO ()
 5 | main = putStrLn !(foo 10)
                     ^^^^^^^^^

